# ifred

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  azure-pipelines.yml  build.cmd  common_defs.h  cssobserver.h  ida-plugin.json  ida_headers.h  ifred.cpp  ifred.pro  ifred_python.cpp  item.css  myfilter.cpp  myfilter.h  qcommands.cpp  qcommands.h  qitem.cpp  qitem.h  qitems.cpp  qitems.h  qpalette_.cpp  qpalette_.h  qpalette_inner.cpp  qpalette_inner.h  qsearch.cpp  qsearch.h  searchbox.css  styles.json  utils.cpp  utils.h  window.css
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  benchmark.cpp
palette/: .gitignore  CMakeLists.txt  CMakeSettings.json  build.cmd  palette.cpp  palette.h
palette/ida-cmake/: LICENSE  README.md  build.py
palette/ida-cmake/cmake/: IDA.cmake
palette/include/: action.h  cssobserver.h  observers.h  palette_api.h  utils.h
palette/include/palette/: action.h  api.h  filter.h  observers.h  utils.h  widgets.h
palette/include/palette/search_services/: basic_service.h
palette/include/palette/widgets/: item.h  palette.h  palette_items.h
palette/include/widgets/: item.h  items.h  myfilter.h  palette.h  palette_filter.h  palette_manager.h  qitem.h  qitems.h  qpalette_inner.h  qpalettecontainer.h  qsearch.h
palette/res/: config.json  theme_bundle.qrc
palette/res/theme/: searchbox.css  styles.json  window.css
palette/res/theme/ayudark/: item.css  searchbox.css  styles.json  window.css
palette/res/theme/ayumirage/: item.css  searchbox.css  styles.json  window.css
palette/res/theme/ayuwhite/: item.css  searchbox.css  styles.json  window.css
palette/res/theme/gitkraken/: window.css
palette/res/theme/solarized-dark/: window.css
palette/res/theme/solarized-light/: styles.json  window.css
palette/src/: action.cpp  api.cpp  common_defs.h  cssobserver.h  filter.cpp  fts_fuzzy_match.h  ida.cpp  ida_headers.h  ifred_python.cpp  myfilter.cpp  myfilter.h  palette_api.cpp  palette_manager.cpp  palette_manager.h  python.cpp  qitem.cpp  qitem.h  qitems.cpp  qpalette_inner.cpp  qpalette_inner.h  qpalettecontainer.h  qsearch.cpp  qsearch.h  utils.cpp  utils.h
palette/src/bindings/: pypalette.cpp  pypalette.h  qpypalette_inner.cpp  qpypalette_inner.h
palette/src/ida/: CMakeLists.txt  plugin.cpp  plugin.h  python.cpp
palette/src/search_services/: basic_service.cpp  fts_fuzzy_match.h
palette/src/widgets/: item.cpp  items.cpp  myfilter.cpp  myfilter.h  palette.cpp  palette_filter.cpp  palette_manager.cpp  palette_manager.h  qitem.cpp  qitem.h  qitems.cpp  qitems.h  qpalette_inner.cpp  qpalette_inner.h  qpalettecontainer.cpp  qpalettecontainer.h  qsearch.cpp  qsearch.h
standalone/: CMakeLists.txt  standalone.cpp
